--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -92,7 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "Ada",
   "environment.network.development": "Development",
-  "environment.network.ff": "Shelley Testnet",
+  "environment.network.shelley_testnet": "Shelley Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "Mainnet",
@@ -478,7 +478,7 @@
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
-  "test.environment.shelleyFfLabel": "Shelley Testnet",
+  "test.environment.shelleyTestnetLabel": "Shelley Testnet",
   "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
