--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -92,7 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "ADA",
   "environment.network.development": "開発",
-  "environment.network.ff": "Shelleyテストネット",
+  "environment.network.shelley_testnet": "Shelleyテストネット",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "メインネット",
@@ -478,7 +478,7 @@
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
-  "test.environment.shelleyFfLabel": "Shelleyテストネット",
+  "test.environment.shelleyTestnetLabel": "Shelleyテストネット",
   "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
