--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2129,13 +2129,13 @@
       },
       {
         "defaultMessage": "!!!Shelley Testnet",
-        "description": "Label for ff with version.",
+        "description": "Label for shelley_testnet with version.",
         "end": {
           "column": 3,
           "line": 27
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
-        "id": "test.environment.shelleyFfLabel",
+        "id": "test.environment.shelleyTestnetLabel",
         "start": {
           "column": 6,
           "line": 23
@@ -11520,13 +11520,13 @@
       },
       {
         "defaultMessage": "!!!Shelley Testnet",
-        "description": "Label for ff with version.",
+        "description": "Label for shelley_testnet with version.",
         "end": {
           "column": 3,
           "line": 22
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
-        "id": "test.environment.shelleyFfLabel",
+        "id": "test.environment.shelleyTestnetLabel",
         "start": {
           "column": 6,
           "line": 18
@@ -12369,7 +12369,7 @@
           "line": 197
         },
         "file": "source/renderer/app/i18n/global-messages.js",
-        "id": "environment.network.ff",
+        "id": "environment.network.shelley_testnet",
         "start": {
           "column": 14,
           "line": 193
