[DDW-178] Step 1 - progress

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -380,11 +380,17 @@
   "staking.navigation.info": "Info",
   "staking.navigation.rewards": "Rewards",
   "staking.navigation.stake_pools": "Stake pools",
+  "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
+  "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
+  "staking.redeemItnRewards.step1.continueButton.label": "Continue",
+  "staking.redeemItnRewards.step1.learnMoreLink.label": "Learn More",
+  "staking.redeemItnRewards.step1.learnMoreLink.url": "http://iohk.io",
   "staking.redeemItnRewards.step1.description": "If you participated in the Incentivized Testnet and earned rewards by running a stake pool or delegating your stake, you can use this feature to redeem your rewards as ada on the Cardano mainnet. You will need the wallet recovery phrase for the Incentivized Testnet wallet used to earn rewards and an existing mainnet wallet in Daedalus to which the rewards will be transferred. This wallet will also be used to pay any applicable transaction fees.",
+  "staking.redeemItnRewards.step1.learnMoreLinkLabel": "Learn More",
   "staking.redeemItnRewards.step1.recoveryPhraseLabel": "Wallet recovery phrase for your Incentivized Testnet Rewards wallet:",
-  "staking.redeemItnRewards.step1.walletsDropdownLabel": "Redeem rewards to:",
   "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.walletsDropdownError": "The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
+  "staking.redeemItnRewards.step1.walletsDropdownLabel": "Redeem rewards to:",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
