--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -391,6 +391,15 @@
   "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.walletsDropdownError": "The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
   "staking.redeemItnRewards.step1.walletsDropdownLabel": "Redeem rewards to:",
+  "staking.redeemItnRewards.step2.continueButtonLabel": "Confirm rewards redemption",
+  "staking.redeemItnRewards.step2.finalTotal": "Final total",
+  "staking.redeemItnRewards.step2.rewardsTotal": "Rewards total",
+  "staking.redeemItnRewards.step2.spendingPasswordLabel": "<span>Wallet spending password</span> (<b>{walletName}</b> wallet)",
+  "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "Password",
+  "staking.redeemItnRewards.step2.title": "Confirm rewards redemption",
+  "staking.redeemItnRewards.step2.toLabel": "To",
+  "staking.redeemItnRewards.step2.transactionFees": "Transaction fees",
+  "staking.redeemItnRewards.step2.walletFrom": "<b>{walletName}</b> wallet",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
