rename ff to shelley_testnet (#2045)
* rename ff to shelley_testnet

* bumps wallet to an unreleased version that works with 1.14.0 node

* Finish FF to SHELLEY_TESTNET rename

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2129,15 +2129,15 @@
       },
       {
         "defaultMessage": "!!!Shelley Testnet",
-        "description": "Label for ff with version.",
+        "description": "Label for shelley_testnet with version.",
         "end": {
           "column": 3,
           "line": 27
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
-        "id": "test.environment.shelleyFfLabel",
+        "id": "test.environment.shelleyTestnetLabel",
         "start": {
-          "column": 6,
+          "column": 19,
           "line": 23
         }
       },
@@ -11520,15 +11520,15 @@
       },
       {
         "defaultMessage": "!!!Shelley Testnet",
-        "description": "Label for ff with version.",
+        "description": "Label for shelley_testnet with version.",
         "end": {
           "column": 3,
           "line": 22
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
-        "id": "test.environment.shelleyFfLabel",
+        "id": "test.environment.shelleyTestnetLabel",
         "start": {
-          "column": 6,
+          "column": 19,
           "line": 18
         }
       },
@@ -12369,9 +12369,9 @@
           "line": 197
         },
         "file": "source/renderer/app/i18n/global-messages.js",
-        "id": "environment.network.ff",
+        "id": "environment.network.shelley_testnet",
         "start": {
-          "column": 14,
+          "column": 27,
           "line": 193
         }
       },
