--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -832,7 +832,7 @@
   "wallet.transferFunds.dialog1.title": "残高ウォレットの資金を移し替える",
   "wallet.transferFunds.dialog2.label.amount": "金額",
   "wallet.transferFunds.dialog2.label.buttonLabel": "資金を移す",
-  "wallet.transferFunds.dialog2.label.description": "sourceWalletNameウォレットからtargetWalletNameウォレットへ移し替えます。",
+  "wallet.transferFunds.dialog2.label.description": "{sourceWalletName}ウォレットから{targetWalletName}ウォレットへ移し替えます。",
   "wallet.transferFunds.dialog2.label.fees": "手数料",
   "wallet.transferFunds.dialog2.label.total": "合計",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "送信時パスワードを入力してください",
