[DDW-170] Fix unrelated translation changes

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -281,12 +281,12 @@
   "staking.delegationCenter.delegate": "委任する",
   "staking.delegationCenter.description": "変更した委任設定は、現行の次のCardanoエポックが終了すると有効になります。インセンティブ付きテストネットのエポックの継続時間は1日です。今回の変更はすべて{timeUntilFutureEpoch}後に有効になります。",
   "staking.delegationCenter.epoch": "エポック",
-  "staking.delegationCenter.headingLeft": "Cardanoエポック{nextEpochNumber}開始まであと",
+  "staking.delegationCenter.headingLeft": "次のCardanoエポック開始まであと",
   "staking.delegationCenter.headingRight": "現在のCardanoエポック",
   "staking.delegationCenter.loadingStakePoolsMessage": "ステークプールをロードしています",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "ウォレットを作成する",
-  "staking.delegationCenter.noWallets.headLine": "委任センターはウォレットがないと利用できません。",
-  "staking.delegationCenter.noWallets.instructions": "ウォレットを作成（または既存のウォレットを復元）してから、改めてここでステークを委任してください。",
+  "staking.delegationCenter.noWallets.headLine": "委任センターはShelley対応のウォレットがないと利用できません。",
+  "staking.delegationCenter.noWallets.instructions": "ウォレットを作成し、{minDelegationFunds}ADA以上を移して（または既存の資金入りウォレットを復元して）から、改めてここでステークを委任してください。",
   "staking.delegationCenter.notDelegated": "委任未設定",
   "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
@@ -294,7 +294,7 @@
   "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
-  "staking.delegationCenter.totalSlots": "総スロット",
+  "staking.delegationCenter.totalSlots": "総スロット数",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "ステークを委任していないと、報酬を得られないことを理解しました。",
@@ -307,9 +307,9 @@
   "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "送信時パスワードを入力してください",
   "staking.delegationCenter.undelegate.dialog.title": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.unknownStakePoolLabel": "不明の",
-  "staking.delegationCenter.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止します。",
-  "staking.delegationCenter.undelegate.result.dialog.description2": "新しい委任設定はブロックチェーンに送信され、<strong>現行の次のCardanoエポックが{timeUntilNextEpochStart}分後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
-  "staking.delegationCenter.undelegate.result.dialog.title": "ウォレットの委任は解除されました",
+  "staking.delegationCenter.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止されます。",
+  "staking.delegationCenter.undelegate.result.dialog.description2": "新しい委任設定はCardanoブロックチェーンに送信されました。<strong>この設定は現行の次のCardanoエポックが{timeUntilNextEpochStart}後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
+  "staking.delegationCenter.undelegate.result.dialog.title": "ウォレット委任は解除されました",
   "staking.delegationCenter.unknownStakePoolLabel": "不明の",
   "staking.delegationCenter.walletAmount": "{amount}ADA",
   "staking.delegationCountdown.buttonLabel": "もっと知る",
@@ -323,10 +323,10 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "最近選択したステークプールから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "または利用可能な全ステークプールのリストから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "ステークプールを検索する",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットを委任するステークプールを選んでください。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの委任先に<span>「{selectedPoolTicker}」</span>ステークプールが選択されました。",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
-  "staking.delegationSetup.chooseStakePool.step.dialog.title": "ウォレットを委任する",
+  "staking.delegationSetup.chooseStakePool.step.dialog.title": "ステークプールを選択する",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "委任する資金の入ったウォレットを選んでください。委任を有効にするためには選択されたウォレットに<span>{minDelegationFunds}ADA以上</span>の資金が入っている必要があります。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "選択されたウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
@@ -341,7 +341,7 @@
   "staking.delegationSetup.confirmation.step.dialog.description": "委任設定をCardanoブロックチェーンに送信して<span>{selectedWalletName}</span>ウォレットの委任先が<span>「{selectedPoolTicker}」</span>ステークプールであることを確認します。",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "手数料",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "送信時パスワード",
-  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワード",
+  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワードを入力してください",
   "staking.delegationSetup.confirmation.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
   "staking.delegationSetup.confirmation.step.dialog.title": "委任を確認する",
   "staking.delegationSetup.intro.step.dialog.cancelButtonLabel": "キャンセル",
@@ -354,14 +354,13 @@
   "staking.delegationSetup.intro.step.dialog.stepsExplanation.step3": "委任の確認",
   "staking.delegationSetup.intro.step.dialog.title": "ウォレットを委任する",
   "staking.delegationSetup.notAvailable.dialog.closeButtonLabel": "閉じる",
-  "staking.delegationSetup.notAvailable.dialog.description": "委任に必要な<span>最低額{minDelegationFunds}ADA</span>が入ったウォレットがありません",
-  "staking.delegationSetup.notAvailable.dialog.title": "委任できません",
+  "staking.delegationSetup.notAvailable.dialog.description": "委任に必要な<span>最低額{minDelegationFunds}ADA</span>が入ったウォレットがありません。",
+  "staking.delegationSetup.notAvailable.dialog.title": "現在委任できません",
   "staking.delegationSetup.steps.step.1.label": "ウォレット",
   "staking.delegationSetup.steps.step.2.label": "ステークプール",
   "staking.delegationSetup.steps.step.3.label": "確認",
   "staking.delegationSetup.success.step.dialog.closeButtonLabel": "閉じる",
-  "staking.delegationSetup.success.step.dialog.description.line1": "<span>{delegatedWalletName}</span>ウォレットのステークは<span>[{delegatedStakePoolTicker}] {delegatedStakePoolName}</span>ステークプールに委任されました。",
-  "staking.delegationSetup.success.step.dialog.description.line2": "新しい委任設定はブロックチェーンに送信され、<strong>現行の次のCardanoエポックが{timeUntilNextEpochStart}分後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
+  "staking.delegationSetup.success.step.dialog.description.line2": "新しい委任設定はCardanoブロックチェーンに送信されました。<strong>この設定は現行の次のCardanoエポックが{timeUntilNextEpochStart}後に終了すると有効になります</strong>。それまでは、変更前の委任設定が有効のままとなります。",
   "staking.delegationSetup.success.step.dialog.title": "ウォレットは委任されました",
   "staking.epochs.currentEpoch.tableHeader.pool": "ステークプール",
   "staking.epochs.currentEpoch.tableHeader.slotsElected": "選出されたスロット",
@@ -388,12 +387,12 @@
   "staking.rewards.learnMore.ButtonLabel": "もっと知る",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000026583",
   "staking.rewards.no.rewards": "報酬なし",
-  "staking.rewards.note": "<p>ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれます。</p><p>インセンティブ付きテストネットで得た報酬は報酬ウォレット残高には追加されません。報酬はインセンティブ付きテストネット終了後にCardanoメインネットに実際のADAで支払われます。</p><p>ステークプールを運営するためにこのウォレットの資金を使用している場合、ここに表示される報酬には出資ステーク分が含まれる場合があります。これは、Cardanoメインネットに支払われる報酬残高には含まれません。</p>",
+  "staking.rewards.note": "ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれ、ウォレット残高に追加されます。",
   "staking.rewards.tableHeader.date": "日付",
   "staking.rewards.tableHeader.pool": "ステークプール",
   "staking.rewards.tableHeader.reward": "報酬",
   "staking.rewards.tableHeader.wallet": "ウォレット",
-  "staking.rewards.title": "委任で獲得した報酬",
+  "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.listTitle": "ステークプール ({pools})",
   "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
@@ -827,9 +826,9 @@
   "wallet.transaction.unresolvedInputAddressesLinkUnavailableLabel": "Cardanoエクスプローラーのリンクは現在使用できません。",
   "wallet.transactions.no.transactions": "トランザクションはありません",
   "wallet.transferFunds.dialog1.continueLabel": "続ける",
-  "wallet.transferFunds.dialog1.sourceWallet": "送金元残高ウォレット",
-  "wallet.transferFunds.dialog1.targetWallet": "入金先報酬ウォレット",
-  "wallet.transferFunds.dialog1.title": "残高ウォレットの資金を移し替える",
+  "wallet.transferFunds.dialog1.sourceWallet": "送金元Byronレガシーウォレット",
+  "wallet.transferFunds.dialog1.targetWallet": "入金先Shelley対応ウォレット",
+  "wallet.transferFunds.dialog1.title": "Byronレガシーウォレットの資金を移す",
   "wallet.transferFunds.dialog2.label.amount": "金額",
   "wallet.transferFunds.dialog2.label.buttonLabel": "資金を移す",
   "wallet.transferFunds.dialog2.label.description": "{sourceWalletName}ウォレットから{targetWalletName}ウォレットへ移し替えます。",
