--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -397,9 +397,9 @@
   "staking.redeemItnRewards.step2.spendingPasswordLabel": "<span>Wallet spending password</span> (<b>{walletName}</b> wallet)",
   "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "Password",
   "staking.redeemItnRewards.step2.title": "Confirm rewards redemption",
-  "staking.redeemItnRewards.step2.toLabel": "To",
+  "staking.redeemItnRewards.step2.walletToLabel": "To",
   "staking.redeemItnRewards.step2.transactionFees": "Transaction fees",
-  "staking.redeemItnRewards.step2.walletFrom": "<b>{walletName}</b> wallet",
+  "staking.redeemItnRewards.step2.walletToName": "<b>{walletName}</b> wallet",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
