[DDW-170] Fix english translations

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -281,12 +281,12 @@
   "staking.delegationCenter.delegate": "Delegate",
   "staking.delegationCenter.description": "Changes to delegation preferences will take effect after both the current and next Cardano epochs have completed. Epochs on the Incentivized Testnet last one day. Any changes made now will take effect in {timeUntilFutureEpoch}.",
   "staking.delegationCenter.epoch": "Epoch",
-  "staking.delegationCenter.headingLeft": "Cardano epoch {nextEpochNumber} starts in",
+  "staking.delegationCenter.headingLeft": "Next Cardano epoch starts in",
   "staking.delegationCenter.headingRight": "Current Cardano epoch",
   "staking.delegationCenter.loadingStakePoolsMessage": "Loading stake pools",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "Create a wallet",
-  "staking.delegationCenter.noWallets.headLine": "The Delegation Center is not available because you don't have any wallets.",
-  "staking.delegationCenter.noWallets.instructions": "Create a new wallet (or restore an existing one) then come back here to delegate your stake.",
+  "staking.delegationCenter.noWallets.headLine": "The delegation center is not available because you currently do not have any Shelley-compatible wallets.",
+  "staking.delegationCenter.noWallets.instructions": "Create a new wallet and transfer in a minimum of {minDelegationFunds} ada (or restore an existing wallet with funds), then return here to delegate your stake.",
   "staking.delegationCenter.notDelegated": "Undelegated",
   "staking.delegationCenter.or": "or",
   "staking.delegationCenter.redelegate": "Redelegate",
@@ -304,11 +304,11 @@
   "staking.delegationCenter.undelegate.dialog.feesLabel": "Fees",
   "staking.delegationCenter.undelegate.dialog.passwordError": "Incorrect spending password.",
   "staking.delegationCenter.undelegate.dialog.spendingPasswordLabel": "Spending password",
-  "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "Type your spending password here",
+  "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "Enter spending password",
   "staking.delegationCenter.undelegate.dialog.title": "Undelegate",
   "staking.delegationCenter.undelegate.dialog.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
-  "staking.delegationCenter.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+  "staking.delegationCenter.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
   "staking.delegationCenter.undelegate.result.dialog.title": "Wallet undelegated",
   "staking.delegationCenter.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.walletAmount": "{amount} ADA",
@@ -320,28 +320,28 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "You are already delegating <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "You are already pending delegation <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "Currently selected stake pool:",
-  "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "Pick one of your recent stake pool choices:",
+  "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "Choose one of your recent stake pool choices:",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "Or select a stake pool from the list of all available stake pools:",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "Search stake pools",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to delegate to for <span>{selectedWalletName}</span> wallet.",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to receive your delegated funds in the <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "You have selected <span>[{selectedPoolTicker}]</span> stake pool to delegate to for <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
-  "staking.delegationSetup.chooseStakePool.step.dialog.title": "Delegate wallet",
+  "staking.delegationSetup.chooseStakePool.step.dialog.title": "Choose a stake pool",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "Continue",
-  "staking.delegationSetup.chooseWallet.step.dialog.description": "Choose a wallet with funds that you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be available.",
+  "staking.delegationSetup.chooseWallet.step.dialog.description": "Choose a wallet that holds the funds you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be an option.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA which is required for delegation to be available. Please select a wallet with <span>a minimum amount of {minDelegationFunds} ADA</span> and click continue.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorRestoringWallet": "This wallet can’t be used for delegation while it’s being synced.",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "Wallet",
-  "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "Select Wallet",
+  "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "Select wallet",
   "staking.delegationSetup.chooseWallet.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.chooseWallet.step.dialog.title": "Delegate wallet",
   "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "Calculating fees",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "Cancel",
   "staking.delegationSetup.confirmation.step.dialog.confirmButtonLabel": "Confirm",
-  "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation for <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool by posting your delegation preferences on the Cardano blockchain.",
+  "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation choice to <span>[{selectedPoolTicker}]<span> stake pool for your <span>{selectedWalletName}<span> wallet by posting your delegation preferences on the Cardano blockchain.",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "Fees",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "Spending password",
-  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "Password",
+  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "Enter your password",
   "staking.delegationSetup.confirmation.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.confirmation.step.dialog.title": "Confirm Delegation",
   "staking.delegationSetup.intro.step.dialog.cancelButtonLabel": "Cancel",
@@ -354,14 +354,14 @@
   "staking.delegationSetup.intro.step.dialog.stepsExplanation.step3": "Delegation confirmation",
   "staking.delegationSetup.intro.step.dialog.title": "Delegate wallet",
   "staking.delegationSetup.notAvailable.dialog.closeButtonLabel": "Close",
-  "staking.delegationSetup.notAvailable.dialog.description": "None of your wallets have the <span>minimum amount of {minDelegationFunds} ada</span> required for delegation",
-  "staking.delegationSetup.notAvailable.dialog.title": "Delegation not available",
+  "staking.delegationSetup.notAvailable.dialog.description": "None of your wallets currently hold the <span>minimum amount of {minDelegationFunds} that is required for delegation options.",
+  "staking.delegationSetup.notAvailable.dialog.title": "Delegation is not currently available",
   "staking.delegationSetup.steps.step.1.label": "Wallet",
   "staking.delegationSetup.steps.step.2.label": "Stake pool",
   "staking.delegationSetup.steps.step.3.label": "Confirmation",
   "staking.delegationSetup.success.step.dialog.closeButtonLabel": "Close",
   "staking.delegationSetup.success.step.dialog.description.line1": "The stake from your wallet <span>{delegatedWalletName}</span> is now delegated to the <span>[{delegatedStakePoolTicker}] {delegatedStakePoolName}</span> stake pool.",
-  "staking.delegationSetup.success.step.dialog.description.line2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+  "staking.delegationSetup.success.step.dialog.description.line2": "Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and the next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
   "staking.delegationSetup.success.step.dialog.title": "Wallet Delegated",
   "staking.epochs.currentEpoch.tableHeader.pool": "Stake pool",
   "staking.epochs.currentEpoch.tableHeader.slotsElected": "Slots elected",
@@ -388,7 +388,7 @@
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
   "staking.rewards.no.rewards": "No rewards",
-  "staking.rewards.note": "<p>Rewards earned by delegating your stake are automatically collected into your reward account.</p><p>Rewards earned on the Incentivized Testnet are not added to your Rewards wallet balance. They will be paid to you in real ada on the Cardano mainnet after the end of the Incentivized Testnet.</p><p>If you are using funds from this wallet to operate a stake pool, the rewards displayed here may include your pledged stake, which will not be counted when reward balances are paid out on the Cardano mainnet.</p>",
+  "staking.rewards.note": "Rewards earned by delegating your stake are automatically collected into your reward account and added to your wallet balance.",
   "staking.rewards.tableHeader.date": "Date",
   "staking.rewards.tableHeader.pool": "Stake pool",
   "staking.rewards.tableHeader.reward": "Reward",
@@ -485,7 +485,7 @@
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
   "wallet.add.dialog.create.description": "Create a new wallet",
-  "wallet.add.dialog.create.description.itn": "Create a new Shelley wallet",
+  "wallet.add.dialog.create.description.itn": "Create a new wallet",
   "wallet.add.dialog.create.label": "Create",
   "wallet.add.dialog.import.description": "Import wallets from an earlier version of Daedalus or the Daedalus state directory",
   "wallet.add.dialog.import.label": "Import",
@@ -538,7 +538,7 @@
   "wallet.create.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.create.dialog.templateStep": "Template",
   "wallet.create.dialog.title": "Create a wallet",
-  "wallet.create.dialog.title.itn": "Create a new Shelley wallet",
+  "wallet.create.dialog.title.itn": "Create a new wallet",
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.hardware.hardwareWalletBegin": "To begin, connect and unlock your <span>Hardware wallet Device</span>",
@@ -559,7 +559,7 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.legacy.notification.descriptionWithFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
+  "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
   "wallet.navigation.more": "More",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
@@ -827,15 +827,15 @@
   "wallet.transaction.unresolvedInputAddressesLinkUnavailableLabel": "Cardano Explorer link currently unavailable.",
   "wallet.transactions.no.transactions": "No transactions",
   "wallet.transferFunds.dialog1.continueLabel": "Continue",
-  "wallet.transferFunds.dialog1.sourceWallet": "From legacy wallet",
+  "wallet.transferFunds.dialog1.sourceWallet": "From Byron legacy wallet",
   "wallet.transferFunds.dialog1.targetWallet": "To Shelley-compatible wallet",
-  "wallet.transferFunds.dialog1.title": "Transfer funds from the legacy wallet",
+  "wallet.transferFunds.dialog1.title": "Transfer funds from the Byron legacy wallet",
   "wallet.transferFunds.dialog2.label.amount": "Amount",
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
-  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to the {targetWalletName} wallet.",
+  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
   "wallet.transferFunds.dialog2.label.total": "Total",
-  "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Type your spending password",
+  "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
-  "wallet.transferFunds.dialog2.title": "Transfer funds from the legacy wallet"
+  "wallet.transferFunds.dialog2.title": "Transfer funds from the Byron legacy wallet"
 }
