--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -118,10 +118,12 @@
   "global.errors.invalidEmail": "Invalid email entered, please check.",
   "global.errors.invalidMnemonic": "Invalid phrase entered, please check.",
   "global.errors.invalidRepeatPassword": "Doesn't match",
-  "global.errors.invalidSpendingPassword": "Invalid password",
+  "global.errors.invalidSpendingPassword": "Invalid",
   "global.errors.invalidWalletName": "Wallet name requires at least 3 and at most 40 letters",
   "global.errors.paperWalletOpenPdfError": "The file you are trying to replace is open. Please close it and try again.",
   "global.errors.rewardsOpenCsvError": "The file you are trying to replace is open. Please close it and try again.",
+  "global.errors.strongSpendingPassword": "Strong",
+  "global.errors.weakSpendingPassword": "Weak",
   "global.labels.all": "All",
   "global.labels.cancel": "Cancel",
   "global.labels.change": "Change",
@@ -139,7 +141,7 @@
   "global.language.german": "German",
   "global.language.japanese": "Japanese / 日本語",
   "global.language.korean": "Korean",
-  "global.passwordInstructions": "The password needs to be at least <strong>10 characters</strong> long, and have at least <strong>1 uppercase letter</strong>, <strong>1 lowercase letter</strong> and <strong>1 number</strong>.",
+  "global.passwordInstructions": "The password needs to be <strong>at least 10 characters</strong> long.",
   "global.punctuation.colon": ":",
   "global.punctuation.dot": ".",
   "global.range.from": "from",
