[DDW-283]: Implement slider component for Stake Pools screen

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -393,9 +393,19 @@
   "staking.rewards.tableHeader.wallet": "ウォレット",
   "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
+  "staking.stakePools.learnMore": "もっと知る",
   "staking.stakePools.listTitle": "ステークプール ({pools})",
   "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
   "staking.stakePools.loadingStakePoolsMessage": "ステークプールをロードしています",
+  "staking.stakePools.rankingAllWallets": "すべてのウォレット",
+  "staking.stakePools.rankingAllWalletsEnd": "の合計額を基にランク付けされています。",
+  "staking.stakePools.rankingAllWalletsStart": "ステークプールは現在",
+  "staking.stakePools.rankingDescription": "スライダーを使用して、委任する量を基にステークプールをランク付けします。",
+  "staking.stakePools.rankingOneWalletEnd": "ウォレットの量を基にランク付けされています。",
+  "staking.stakePools.rankingOneWalletStart": "ステークプールは現在",
+  "staking.stakePools.rankingSelectWallet": "ウォレットを選択する",
+  "staking.stakePools.rankingSelectWalletEnd": "を使用して委任する量を設定します。",
+  "staking.stakePools.rankingSelectWalletStart": "または、",
   "staking.stakePools.search.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
