[DDW-178] Step 2 - progress

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -394,12 +394,12 @@
   "staking.redeemItnRewards.step2.continueButtonLabel": "Confirm rewards redemption",
   "staking.redeemItnRewards.step2.finalTotal": "Final total",
   "staking.redeemItnRewards.step2.rewardsTotal": "Rewards total",
-  "staking.redeemItnRewards.step2.spendingPasswordLabel": "<span>Wallet spending password</span> (<b>{walletName}</b> wallet)",
+  "staking.redeemItnRewards.step2.spendingPasswordLabel": "Wallet spending password <em>(<b>{walletName}</b> wallet)</em>",
   "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "Password",
   "staking.redeemItnRewards.step2.title": "Confirm rewards redemption",
   "staking.redeemItnRewards.step2.walletToLabel": "To",
   "staking.redeemItnRewards.step2.transactionFees": "Transaction fees",
-  "staking.redeemItnRewards.step2.walletToName": "<b>{walletName}</b> wallet",
+  "staking.redeemItnRewards.step2.walletToName": "{walletName} <span>wallet</span>",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
