--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -397,9 +397,15 @@
   "staking.redeemItnRewards.step2.spendingPasswordLabel": "Wallet spending password <em>(<b>{walletName}</b> wallet)</em>",
   "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "Password",
   "staking.redeemItnRewards.step2.title": "Confirm rewards redemption",
-  "staking.redeemItnRewards.step2.walletToLabel": "To",
   "staking.redeemItnRewards.step2.transactionFees": "Transaction fees",
+  "staking.redeemItnRewards.step2.walletToLabel": "To",
   "staking.redeemItnRewards.step2.walletToName": "{walletName} <span>wallet</span>",
+  "staking.redeemItnRewards.step3.failure.description": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase.",
+  "staking.redeemItnRewards.step3.failure.backButtonLabel": "Back",
+  "staking.redeemItnRewards.step3.success.description": "You have successfully redeemed <b>{finalTotal}</b> ADA to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees",
+  "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "Download PDF certificate",
+  "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "Open the wallet",
+  "staking.redeemItnRewards.step3.success.title": "Incentivized Testnet rewards redeemed!",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
